--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Vue</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <style>
+      .box {
+        width: 400px;
+        padding: 100px 0;
+        text-align: center;
+        background: #ddd;
+        margin: 20px;
+        display: inline-block;
+      }
+    </style>
   </head>
 
   <body>
@@ -12,8 +23,36 @@
     <div id="header1">
       <p>{{ title }} -> {{ author }} ({{age}})</p>
 
+      <!-- onclick  -->
       <button v-on:click="age++">Increase age</button> <br />
-      <button v-on:click="age--">Increase age</button>
+      <button @click="age--">Decrease age</button>
+
+      <button @click="title = 'Harry Potter'">Change title</button>
+      <button @click="changeAuthor1">Change author</button>
+      <button @click="changeAuthor('J.K. Rowling')">User change author</button>
+      <br /><br />
+
+      <!-- if else statement -->
+      <div v-if="showBooks">
+        <p>This is inside v-if</p>
+      </div>
+
+      <button @click="toggleShowBooks">
+        <span v-if="showBooks">Hide Book</span>
+        <span v-else>Show Book</span>
+      </button>
+
+      <div v-show="showBooks">Currently showing books</div>
+      <br /><br />
+      <!-- mouse events -->
+      <div class="box" v-on:mouseover="handleEvent($event, 5)">
+        Mouseover (enter)
+      </div>
+      <div class="box" @mouseleave="handleEvent">Mouseleave</div>
+      <div class="box" @dblclick="handleEvent">Double Click</div>
+      <div class="box" @mousemove="handleMouseMove">
+        Position - {{ x }} , {{ y }}
+      </div>
     </div>
 
     <script src="app.js"></script>
